--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -14,6 +14,7 @@ html(lang="es")
         input(type="color", id="colorPicker", name="colorPicker", value="#FFFFFF")
         button(type="button", onclick="save()") Guardar
         button(type="button", onclick="load()") Recuperar
+        button(type="button", onclick="loadDates()") RecFechas
     .legend-container
       .legend-title Leyenda
     .form-container
@@ -99,13 +100,14 @@ html(lang="es")
         function addSquare(day) {
             console.log("El día seleccionado es:", day);
                     
-            addColorSquare(day); // Añade un cuadrado de color en la casilla correspondiente
+            addColorSquare(day,userDict[idControl].userColor); // Añade un cuadrado de color en la casilla correspondiente
             //document.getElementById('idx').value = day;
             
             // Configurar los datos a enviar en el cuerpo de la solicitud POST
             var postData = {
                 day: day,
-                userId: idControl
+                userId: idControl,
+                userCol: userDict[idControl].userColor,
             };
             
             // Realizar la solicitud POST
@@ -120,13 +122,13 @@ html(lang="es")
         }
 
 
-        function addColorSquare(day) {
+        function addColorSquare(day, color) {
             const dayCell = document.querySelector(`.day-cell[data-day='${day}']`);
             if (dayCell) {
                 const colorContainer = dayCell.querySelector('.color-container');
                 const colorSquare = document.createElement('div');
                 colorSquare.classList.add('color-square');
-                colorSquare.style.backgroundColor = userDict[idControl].userColor;
+                colorSquare.style.backgroundColor = color;
                 colorContainer.appendChild(colorSquare);
             }
         }
@@ -155,18 +157,61 @@ html(lang="es")
             .then(data => {
                 
                 const usersReturned=data.docId
-                console.log(`Diccionario de usuarios->${Object.keys(userDict).length}`)
+                //console.log(`Diccionario de usuarios->${Object.keys(userDict).length}`)
                 usersReturned.forEach(u => {
+                    //console.log(`Cargado user ${u.userName} con color ${u.userColor}`)
                     userDict[u.id] = { userName: u.userName, userColor: u.userColor };
                 })
-                console.log(`Diccionario de usuarios->${Object.keys(userDict).length}`)
+                //console.log(`Diccionario de usuarios->${Object.keys(userDict).length}`)
                 actualizarLeyenda()
+            }).then(d=>{
+                loadDates()
             })
             .catch(error => console.error('Error fetching user:', error));
         }
+        function loadDates(){
+            //console.log("Llamada a LoadDates")
+            Object.keys(userDict).forEach(function(userId) {
+                var uId = userId
+                //console.log(`Consulta para user ${uId}`)
+                var postData = {
+                userId: uId
+                };
+                fetch('/getDatesByUser', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(postData)
+                }).then(response => {
+                    if (!response.ok) {
+                        throw new Error('Error en la respuesta' + response.statusText);
+                    }
+                    return response.json(); 
+                })
+                .then(data => {
+                    
+                    const datesReturned=data.docId
+                    
+                    //en d.dates esta la lista de dates y en d.color el color del user
+                    datesReturned.forEach(d => {
+                        d.dates.forEach(day =>{
+                            //console.log(`Fecha ${day} de ${uId}->${d.color}`)
+                            addColorSquare(day, d.color)
+                        })
+                          
+                        
+                     })
+                    //- console.log(`Diccionario de usuarios->${Object.keys(userDict).length}`)
+                    //- actualizarLeyenda()
+                })
+            })
+            
+            //- .catch(error => console.error('Error fetching user:', error));
+        }
 
         function save() {
-            console.log("Llamada a Save")
+            //console.log("Llamada a Save")
             actualUser = document.getElementById('texto').value;
             actualColor = document.getElementById('colorPicker').value;
 
@@ -189,15 +234,15 @@ html(lang="es")
                 return response.json(); 
             })
             .then(data => {
-                console.log("Data es ", data)
+                //console.log("Data es ", data)
                 if (data.docId == null) {
-                    console.log("No debería entrar, el usuario siempre debería estar creado")
+                   // console.log("No debería entrar, el usuario siempre debería estar creado")
                 } else {
                     const userReturned= data.docId
-                    console.log('User exists with ID:', userReturned);
+                    //console.log('User exists with ID:', userReturned);
                     userDict[userReturned.id] = { userName: userReturned.userName, userColor: userReturned.userColor };
                     
-                    console.log(userDict);
+                    //console.log(userDict);
                     actualizarLeyenda();
                     idControl=userReturned.id
                     
@@ -253,7 +298,7 @@ html(lang="es")
                 legendContainer.appendChild(newLegendItem);
             });
 
-            console.log("Leyenda actualizada");
+            //console.log("Leyenda actualizada");
             document.getElementById('texto').value= ""
             document.getElementById('colorPicker').value="#ffffff"
         }
